<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context="com.DPAC.collabormate.Calendar">

    <!--
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    -->
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="never"
        android:title="@string/settings">
    </item>

    <item
        android:id="@+id/help"
        android:icon="@drawable/ic_action_help"
        android:title="@string/help">
    </item>

    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_action_about"
        android:title="@string/about">
    </item>

</menu>
